<?xml version="1.0"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/LinearLayout1"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".OperacionesBasicasActivity"
              android:weightSum="1">

    <Button
        android:id="@+id/button_binario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/numeros_binarios"
        android:layout_weight="0.10" />

    <Button
        android:id="@+id/button_octales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/numeros_octales"
        android:layout_weight="0.10" />

    <Button
        android:id="@+id/button_decimales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/numeros_decimales"
        android:layout_weight="0.10" />
    <Button
        android:id="@+id/button_hexadecimales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/numeros_hexadecimales"
        android:layout_weight="0.10" />

</LinearLayout>
